# surfacescope

./: HOW_TO_TEST.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
surfacescope/: cli.py  models.py  utils.py
surfacescope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
surfacescope/modules/: discovery.py  dns_tools.py  http_probe.py  pipeline.py  portscan.py  reporting.py  scoring.py  tls_tools.py
surfacescope/templates/: report.html.j2
tests/: test_pipeline_demo.py  test_scoring.py
